--- a/client/src/components/layouts/navbar/search/Search.css
+++ b/client/src/components/layouts/navbar/search/Search.css
@@ -1,6 +1,10 @@
 /* ------------------------------------------------------------------------------------------->>>>>>>> */
+
 .search-board {
   display: none;
+}
+
+.search-board-active {
   padding: 10px;
   background-color: white;
   border: 1px solid white;
@@ -11,7 +15,7 @@
   box-shadow: -11px 11px 27px 0px rgba(0, 0, 0, 0.49);
 }
 
-.search-board input {
+.search-board-active input {
   outline: none;
   padding-left: 18px;
   background-color: #f1f1f1;
@@ -89,5 +93,3 @@
 #search-delete:hover {
   background-color: #cbcbcb;
 }
-
-
