--- a/client/src/components/pages/home/home-left/HomeLeft.css
+++ b/client/src/components/pages/home/home-left/HomeLeft.css
@@ -56,6 +56,8 @@
   width: 32px;
   height: 32px;
   overflow: hidden;
+  border: 1px rgb(191, 191, 191) solid;
+  border-radius: 100%;
 }
 
 .left-top-avatar img {
