--- a/client/src/components/pages/user/user-main/user-main-header/UserMainHeader.css
+++ b/client/src/components/pages/user/user-main/user-main-header/UserMainHeader.css
@@ -35,6 +35,39 @@
   background-color: rgba(0, 0, 0, 0.59);
 }
 
+.img-upload {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.img-upload img {
+  margin: 15px 0;
+  width: 100%;
+  object-fit: cover;
+}
+
+input[type="file"]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/facebook-clone-1e97f.appspot.com/o/facebook-icon%2Fbutton-gif.gif?alt=media&token=f43b5f98-0bdb-4b95-8dba-c98e1dadef0e");
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+input[type="file"]::file-selector-button:hover {
+  opacity: 50%;
+}
+
+.foo-bar {
+  text-align: center;
+}
+
 .user-main-avatar-info-container {
   width: 100%;
   background-color: #ffffff;
@@ -102,8 +135,8 @@
 .user-main-info-friend-avatar,
 .user-main-info-friend-last {
   overflow: hidden;
-  width: 43.5px;
-  height: 43.5px;
+  width: 44px;
+  height: 44px;
   border-radius: 100%;
   border: 3px white solid;
   cursor: pointer;
@@ -125,6 +158,8 @@
 .user-main-info-friend-first img,
 .user-main-info-friend-avatar img,
 .user-main-info-friend-last img {
+  border-radius: 100%;
+  border: 1.5px solid rgb(192, 192, 192);
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -133,8 +168,8 @@
 .user-main-info-camera {
   cursor: pointer;
   position: absolute;
-  left: 265px;
-  top: 595px;
+  left: 275px;
+  top: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -184,6 +219,39 @@
 
 .user-main-edit:hover {
   background-color: #dadce0;
+}
+
+.user-main-nav-container {
+  display: flex;
+  margin-top: 10px;
+  padding-top: 5px;
+  border-top: 1px solid rgb(198, 198, 198);
+}
+
+.user-main-nav,
+.user-main-nav-active {
+  cursor: pointer;
+  padding: 15px;
+  margin-right: 3px;
+  border-radius: 8px;
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 0px;
+}
+
+.user-main-nav {
+  color: rgb(99, 99, 99);
+  border-bottom: transparent solid 3.5px;
+}
+
+.user-main-nav-active {
+  color: #1b74e4;
+  border-bottom: #1b74e4 solid 3.5px;
+}
+
+.user-main-nav:hover {
+  background-color: #d1d1d183;
+  border-radius: 8px;
 }
 
 @media only screen and (max-width: 1000px) {
