--- a/client/src/components/pages/user/user-main/user-main-bottom/user-main-friends/UserMainFriends.css
+++ b/client/src/components/pages/user/user-main/user-main-bottom/user-main-friends/UserMainFriends.css
@@ -84,14 +84,18 @@
 .user-main-friend-list-block-left {
   display: flex;
   align-items: center;
+  text-decoration: none;
+  color: black;
 }
 
 .friend-list-block-left-img {
-  width: 95px;
-  height: 95px;
+  width: 82px;
+  height: 82px;
   border-radius: 5px;
   overflow: hidden;
   background-color: black;
+  border: 1px rgb(218, 218, 218) solid;
+  margin: 13.5px 0 13.5px 5px;
 }
 
 .friend-list-block-left-img img {
@@ -123,6 +127,7 @@
 .friend-list-block-left-text-same:hover {
   text-decoration: underline;
   cursor: pointer;
+  color: black;
 }
 
 .friend-list-block-left-dot {
@@ -141,6 +146,39 @@
 .friend-list-block-left-dot span {
   font-size: larger;
   padding-top: 2px;
+}
+
+.card-container {
+  max-height: 418px;
+  overflow: auto;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.card-container .card {
+  margin: 5px;
+}
+
+.card-img-container {
+  height: 225px;
+  overflow: hidden;
+}
+
+.card-img-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.card-button-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.card-button-container div {
+  width: 65px;
 }
 
 @media only screen and (max-width: 1000px) {
