--- a/client/src/components/layouts/navbar/search/Search.css
+++ b/client/src/components/layouts/navbar/search/Search.css
@@ -76,9 +76,17 @@
   align-items: center;
 }
 
-.search-block-infor-avartar img {
-  border-radius: 50px;
+.search-block-infor-avartar {
   width: 43px;
+  height: 43px;
+  border-radius: 50px;
+  overflow: hidden;
+}
+
+.search-block-infor-avartar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .search-edit {
